Shifted position of text to correct position

--- a/mobile_application/static/CSS/home.css
+++ b/mobile_application/static/CSS/home.css
@@ -21,7 +21,7 @@ body {
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
     #brand-name-area {
-        margin-top: 5%;
+        margin-top: 25%;
         margin-left: 0%;
         text-align: center;
         width: 100%;
